<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="164dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="144dp"
        android:layout_marginRight="144dp"
        android:padding="8dp"
        android:text="@string/tvRegistration"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/etLogin"
        android:inputType="textPassword"
        android:paddingLeft="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tvRegistration"
        app:layout_constraintStart_toStartOf="@+id/tvRegistration"
        app:layout_constraintTop_toBottomOf="@+id/tvRegistration" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/etEmail"
        android:inputType="textEmailAddress"
        android:paddingLeft="8dp"
        app:layout_constraintEnd_toEndOf="@+id/etLogin"
        app:layout_constraintStart_toStartOf="@+id/etLogin"
        app:layout_constraintTop_toBottomOf="@+id/etLogin" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/etPassword"
        android:inputType="numberPassword"
        android:paddingLeft="8dp"
        app:layout_constraintEnd_toEndOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="@+id/etEmail"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/etAdress"
        android:inputType="textPostalAddress"
        android:paddingLeft="8dp"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/etAge"
        android:inputType="number"
        android:paddingLeft="8dp"
        app:layout_constraintEnd_toEndOf="@+id/etAddress"
        app:layout_constraintStart_toStartOf="@+id/etAddress"
        app:layout_constraintTop_toBottomOf="@+id/etAddress" />

    <ImageButton
        android:id="@+id/ibtSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        app:layout_constraintBottom_toBottomOf="@+id/etAge"
        app:layout_constraintStart_toEndOf="@+id/etAge"
        app:layout_constraintTop_toTopOf="@+id/etAge"
        app:srcCompat="@android:drawable/ic_menu_send" />

    <TextView
        android:id="@+id/tvSuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="8dp"
        android:text="@string/tvSuccess"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/etAge"
        app:layout_constraintStart_toStartOf="@+id/etAge"
        app:layout_constraintTop_toBottomOf="@+id/etAge" />

</androidx.constraintlayout.widget.ConstraintLayout>